# learn-pandas-and-numpy

./: 01-basic.ipynb  02-load-data.ipynb  02-load-save-data.ipynb  03-data.ipynb  04-header.ipynb  05-soup.ipynb  06-plotlib.ipynb  07-mtplt.ipynb  09-links.ipynb  README.md  data.csv  new.data.csv  numpy.ipynb  plotlib.ipynb  pyproject.toml  scikit-learn.ipynb  soup.ipynb
.ipynb_checkpoints/: 01-basic-checkpoint.ipynb  02-load-save-data-checkpoint.ipynb  03-data-checkpoint.ipynb  04-header-checkpoint.ipynb  07-mtplt-checkpoint.ipynb  08-numpy-checkpoint.ipynb  10-seaborn-checkpoint.ipynb  numpy-checkpoint.ipynb  numpy-checkpoint.py  plotlib-checkpoint.ipynb  scikit-learn-checkpoint.ipynb  soup-checkpoint.ipynb
learn_pandas_and_numpy/: numpy.py
