[tool.poetry]
name = "learn-pandas-and-numpy"
version = "0.1.0"
description = ""
authors = ["Vimal Menon <69777626+vimalsmenon@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
