[tool.poetry]
name = "learn-pandas-and-numpy"
version = "0.1.0"
description = ""
authors = ["Vimal Menon <69777626+vimalsmenon@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"
pandas = "^2.2.2"
matplotlib = "^3.8.4"
beautifulsoup4 = "^4.12.3"
humps = "^0.2.2"
pyhumps = "^3.8.0"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
